# vidproctorch

./: .gitignore  CMakeLists.txt  README.md  setup.py  setupnvtorch.py
PyNvCodec/: CMakeLists.txt  __init__.py  __init__.pyi
PyNvCodec/TC/: CMakeLists.txt
PyNvCodec/TC/inc/: MemoryInterfaces.hpp
PyNvCodec/TC/src/: FFmpegDemuxer.cpp  NvEncoder.cpp  TasksColorCvt.cpp
PyNvCodec/src/: PyNvCodec.cpp
PytorchNvCodec/: CMakeLists.txt  __init__.py  __init__.pyi
PytorchNvCodec/src/: PytorchNvCodec.cpp  setup.py
Video_Codec_SDK/Interface/: nvEncodeAPI.h
sample/: ftest.py
